--- a/achieve_rails/Gemfile
+++ b/achieve_rails/Gemfile
@@ -36,6 +36,12 @@ group :development, :test do
   gem 'rspec-rails'
 end
 
+group :test do
+  gem 'capybara', '~> 3.28'
+  gem 'selenium-webdriver'
+  gem 'webdrivers'
+end
+
 group :development do
   gem 'listen', '~> 3.3'
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
