--- a/achieve_vuejs/package.json
+++ b/achieve_vuejs/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.18.6",
@@ -25,6 +26,8 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.19.1",
+    "@testing-library/vue": "^6.4.2",
     "@types/jest": "^29.0.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -36,29 +39,12 @@
     "babel-jest": "^29.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "jest": "^29.0.3",
+    "jest": "26",
     "jest-environment-jsdom": "^29.0.3",
     "jest-jasmine2": "^29.0.3",
-    "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3"
-  },
-  "jest": {
-    "preset": "@vue/cli-plugin-unit-jest/presets/typescript-and-babel",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "globals": {
-      "ts-jest": {
-        "tsConfig": "tsconfig.json"
-      }
-    },
-    "testMatch": [
-      "**/tests/**/*.test.ts"
-    ]
+    "ts-jest": "26",
+    "typescript": "^4.8.3",
+    "vue-jest": "^5.0.0-alpha.10"
   },
   "eslintConfig": {
     "root": true,
