--- a/achieve_vuejs/package.json
+++ b/achieve_vuejs/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "^29.0.3",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "flush-promises": "^1.0.2",
     "jest": "27",
     "jest-environment-jsdom": "27",
     "jest-jasmine2": "^29.0.3",
