--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true
+          ruby-version: default
 
       - name: Cache node modules
         uses: actions/cache@v2
