--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up Ruby
+      - name: Set up Ruby 2.6
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: default
+          ruby-version: 2.6.8
 
       - name: Cache node modules
         uses: actions/cache@v2
