--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: default
+          ruby-version: 2.7.6
 
       - name: Cache node modules
         uses: actions/cache@v2
@@ -37,19 +37,21 @@ jobs:
       - name: Bundler and gem install
         run: |
           gem install bundler
-          bundle install --jobs 4 --retry 3 --path vendor/bundle
+          bundle install
+        working-directory: ./achieve_rails
 
       - name: Yarn install
         run: yarn install --check-files
 
-      - name: Database create and migrate
+      - name: migrate
         run: |
-          cp config/database.yml.ci config/database.yml
           bundle exec rails db:create RAILS_ENV=test
           bundle exec rails db:migrate RAILS_ENV=test
+        working-directory: ./achieve_rails
 
       - name: Run rspec
         run: bundle exec rspec
+        working-directory: ./achieve_rails
 
   rubocop:
     runs-on: ubuntu-latest
@@ -61,7 +63,10 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          bundler-cache: true
+          ruby-version: 2.7.6
 
       - name: Run rubocop
-        run: bundle exec rubocop
+        run: |
+          gem install rubocop
+          rubocop
+        working-directory: ./achieve_rails
