--- a/achieve_rails/config/database.yml
+++ b/achieve_rails/config/database.yml
@@ -22,6 +22,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: sqlite3
+  encoding: utf8mb4
+  username: <%= ENV['DB_USER'] %>
+  password:
+  host: 127.0.0.1
   database: db/test.sqlite3
 
 production:
