feature/deploy_to_ec2

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -96,3 +96,4 @@ jobs:
           RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile &&
           RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate
           ~/.rbenv/shims/bundle exec pumactl restart"
+        working-directory: ./achieve_rails
