--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           eval $(ssh-agent)
           ssh-add ~/.ssh/Achieve-docker-ec2
-          ssh -o StrictHostKeyChecking=no -A ssh -i "Achieve-docker.pem" ec2-user@${{ secrets.TARGET_HOSTNAME }} "cd Achieve &&
+          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} "cd Achieve &&
           git pull origin master &&
           ~/.rbenv/shims/bundle config --local deployment true &&
           ~/.rbenv/shims/bundle config --local without development:test &&
@@ -96,4 +96,3 @@ jobs:
           RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile &&
           RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate
           ~/.rbenv/shims/bundle exec pumactl restart"
-        working-directory: ./achieve_rails
