--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -88,5 +88,4 @@ jobs:
         run: |
           eval $(ssh-agent)
           ssh-add ~/.ssh/Achieve-docker-ec2
-          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} "cd Achieve &&
-          git pull origin master"
+          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} "git pull origin master && cd Achieve"
