--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -88,4 +88,4 @@ jobs:
         run: |
           eval $(ssh-agent)
           ssh-add ~/.ssh/Achieve-docker-ec2
-          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} "ls -al"
+          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} "git pull origin master && cd achieve"
