--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -88,5 +88,5 @@ jobs:
         run: |
           eval $(ssh-agent)
           ssh-add ~/.ssh/Achieve-docker-ec2
-          ssh -o StrictHostKeyChecking=no -A ec2-user@${{ secrets.TARGET_HOSTNAME }} 
+          ssh -o StrictHostKeyChecking=no -A webapp@${{ secrets.TARGET_HOSTNAME }} 
           "cd achieve && git pull origin master"
