--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./achieve_vuejs:/achieve_vue
-    command: yarn run serve
+    # command: yarn run serve
     ports:
       - 80:8080
     depends_on:
