--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/node:16.17.1
+      - image: circleci/node:16.17.1-alpine
     steps:
       - checkout
       - restore_cache:
@@ -16,7 +16,7 @@ jobs:
             - ./node_modules
   test:
     docker:
-      - image: circleci/node:16.17.1
+      - image: circleci/node:16.17.1-alpine
     steps:
       - checkout
       - restore_cache:
