setup-circle-ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "~/repo/achieve_vuejs/package.json" }}
+            - v1-dependencies-{{ checksum "./achieve_vuejs/package.json" }}
       - run:
           name: install dependencies
           command: yarn install
