--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
       - run:
           name: install dependencies
           command: yarn install
+          working_directory: ./achieve_vuejs
       - run:
           name: unit test
           working_directory: ./achieve_vuejs
