setup-circle-ci

--- a/achieve_vuejs/package.json
+++ b/achieve_vuejs/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint ./src/",
+    "lint": "vue-cli-service lint",
     "test": "jest"
   },
   "dependencies": {
