--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - run:
           name: install dependencies
           command: yarn installge
+          working_directory: ./achieve_vuejs
       - save_modules
       - run: 
           name: lint dependencies
