--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       context: ./achieve_vuejs/
       dockerfile: Dockerfile
     volumes:
-      - ./achieve_vuejs/src:/achieve_vue/src
+      - ./achieve_vuejs:/achieve_vue
     # command: yarn run serve
     ports:
       - 80:8080
