--- a/achieve_vuejs/package.json
+++ b/achieve_vuejs/package.json
@@ -10,22 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.12.16",
+    "@babel/preset-env": "^7.19.1",
     "@babel/preset-typescript": "^7.18.6",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
-    "actioncable": "^5.2.8",
-    "axios": "^0.27.2",
-    "core-js": "^3.8.3",
-    "crypto-js": "^4.1.1",
-    "date-fns": "^2.28.0",
-    "v-calendar": "^3.0.0-alpha.8",
-    "vue": "^3.2.13",
-    "vue-axios": "^3.4.1",
-    "vue-router": "^4.0.3",
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/preset-env": "^7.19.1",
     "@testing-library/vue": "^6.4.2",
     "@types/jest": "27",
     "@vue/cli-plugin-babel": "~5.0.0",
@@ -35,15 +26,27 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/test-utils": "^2.0.0-rc.18",
     "@vue/vue3-jest": "^29.1.0",
+    "actioncable": "^5.2.8",
+    "autoprefixer": "^10.4.13",
+    "axios": "^0.27.2",
     "babel-jest": "^29.0.3",
+    "core-js": "^3.8.3",
+    "crypto-js": "^4.1.1",
+    "date-fns": "^2.28.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "flush-promises": "^1.0.2",
     "jest": "27",
     "jest-environment-jsdom": "27",
     "jest-jasmine2": "^29.0.3",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "ts-jest": "27",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "v-calendar": "^3.0.0-alpha.8",
+    "vue": "^3.2.13",
+    "vue-axios": "^3.4.1",
+    "vue-router": "^4.0.3"
   },
   "eslintConfig": {
     "root": true,
