--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - "3000:3000"
     # depends_on:
     #   - db
+    stdin_open: true
+    tty: true
   achieve_vuejs:
     build: 
       context: ./achieve_vuejs/
