--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,38 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-executors:
-  node:
-    docker:
-      - image: cimg/node:16.17.1
-commands:
-  restore_modules:
-    steps:
-      - restore_cache:
-          key: dependency-cache-{{ checksum "./achieve_vuejs/yarn.lock" }}
-  save_modules:
-    steps:
-      - save_cache:
-          key:  dependency-cache-{{ checksum "./achieve_vuejs/yarn.lock" }}
-          paths:
-            - ./node_modules
 
+# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
+# See: https://circleci.com/docs/orb-intro/
+orbs:
+  # See the Ruby orb documentation here: https://circleci.com/developer/orbs/orb/circleci/ruby
+  ruby: circleci/ruby@2.1.1
+
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  lint:
-    executor: node
+  build:
+    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+    docker:
+      # Specify the version you desire here
+      # See: https://circleci.com/developer/images/image/cimg/ruby
+      - image: cimg/ruby:3.3
+
+    # Add steps to the job
+    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
     steps:
+      # Checkout the code as the first step.
       - checkout
-      - restore_modules
       - run:
-          name: install dependencies
-          command: yarn install
-          working_directory: ./achieve_vuejs
-      - save_modules
-      - run: 
-          name: lint dependencies
-          command: yarn lint
-          working_directory: ./achieve_vuejs
-  test:
-    executor: node
-    steps:
-      - checkout
-      - restore_modules
-      - run:
-          name: install dependencies
-          command: yarn install
-          working_directory: ./achieve_vuejs
-      - run:
-          name: unit test
-          command: yarn test
-          working_directory: ./achieve_vuejs
+          name: Which bundler?
+          command: bundle -v
+      - ruby/install-deps
+
+# Orchestrate jobs using workflows
+# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  version: 2
-  lint_and_test:
+  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
+    # Inside the workflow, you define the jobs you want to run.
     jobs:
-      - lint
-      - test:
-          requires:
-            - lint
+      - build
