--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -21,15 +21,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.6
+          bundler: 2.4.22
 
       - name: Cache node modules
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
@@ -37,9 +38,7 @@ jobs:
             ${{ runner.os }}-node-
 
       - name: Bundler and gem install
-        run: |
-          gem install bundler
-          bundle install
+        run: bundle install
         working-directory: ./achieve_rails
 
       - name: Yarn install
@@ -60,12 +59,13 @@ jobs:
     timeout-minutes: 10
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7.6
+          bundler: 2.4.22
 
       - name: Run rubocop
         run: |
