--- a/achieve_rails/Gemfile
+++ b/achieve_rails/Gemfile
@@ -7,6 +7,10 @@ ruby '2.7.6'
 gem 'rails', '~> 6.1.6'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.4'
+
+group :production do
+  gem 'pg', '~> 1.4'
+end
 # Use Puma as the app server
 gem 'puma', '~> 5.0'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
