--- a/achieve_rails/config/cable.yml
+++ b/achieve_rails/config/cable.yml
@@ -6,5 +6,7 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: achieve_rails_production
+  url: <%= ENV['REDIS_URL'] %>
+  channel_prefix: goals_achieve_production
+  allowed_request_origins:
+    - https://www.goals-achieve.click
