--- a/achieve_vuejs/package.json
+++ b/achieve_vuejs/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.11.8",
     "@testing-library/vue": "^6.4.2",
     "@types/jest": "27",
+    "@upstash/redis": "^1.21.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -68,5 +69,9 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "6",
+    "@typescript-eslint/parser": "6"
+  }
 }
